--- a/pages/bookinground/paymentsuccesful.html
+++ b/pages/bookinground/paymentsuccesful.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/assets/css//register.css">
+    <link rel="stylesheet" href="/assets/css/paymentsuccesful.css">
     <script src="https://kit.fontawesome.com/49a7b6b32a.js" crossorigin="anonymous"></script>
 
 </head>
@@ -13,9 +13,10 @@
     <div id="container">
         <div class="tick">
             <i class="fa-solid fa-check"></i><br>
-            <h2 class="h0">Your Account Successfuly Created</h2><br><br><br>
-            <a href="/pages/player/findplayers.html" ><input type="button" value="Find Players" id="findplayers"></a><br>
-            <a href="/pages/bookinground/bookground.html" ><input type="button" value="Book Grounds" id="bookground"></a> 
+            <h2 class="h0">Your Payment is Success</h2><br><br><br>
+            <h2 class="h0"> Your code #98012</h2><br><br>
+            <p class="code">Please the show code in counter </p>
+          
             
         </div>
  
