--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -14,7 +14,7 @@
             <form>
                 <input type="email" placeholder="Email address " id="email"><br>
                 <input type="password" placeholder="Password" id="password"><br>
-                <input type="button" value="Login" id="login"><br>
+                <a href="/index.html" ><input type="button" value="Login" id="login"></a><br>
                 <a class="fp"href="#">Forget password</a><br>
                 <h4  class="newsign">New user</h4><br>
             <a href="/pages/login/signup.html" ><input type="button" value="Create New Acoount" id="newlogin"></a><br>
