--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Ground</title>
-    <link rel="stylesheet" href="./assets/css/findplayers.css">
+    <link rel="stylesheet" href="/assets/css/findplayers.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script src="https://kit.fontawesome.com/49a7b6b32a.js" crossorigin="anonymous"></script>
 
@@ -16,7 +16,7 @@
             
             <ul>
                 <li><a href="/index.html">Home</a> </li>
-                <li><a href="pages/bookinground/bookground.html">Book Grounds</a></li>
+                <li><a href="/pages/bookinground/bookground.html">Book Grounds</a></li>
                 <li><a href="#">Contact us</a></li>
                 <li><a href="/pages/login/login.html"> <button class="login">Login</button></a></li>
             </ul>
@@ -49,7 +49,7 @@
                     </span>
               
                 <p>Person</p>
-                <a href="login.html"> <button class="visit">Visit</button></a></li>
+                <a href="/pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
             </div>
             </div>
             <div class="child1">
