--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -104,7 +104,7 @@
                 <h3 class="gn">Pitch and Play</h3>
                 <img class="gro" src="/assets/images/ground2.JPG">
                 <p class="ln">Annasalai</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="/pages/bookinground/ground2.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -125,7 +125,7 @@
                 <h3 class="gn">Sports Sanity FC Marina</h3>
                 <img class="gro" src="/assets/images/ground3.jpg">
                 <p class="ln">Kilpauk</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="./ground3.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -147,7 +147,7 @@
                 <h3 class="gn">HotFut SPR City</h3>
                 <img class="gro" src="/assets/images/ground4.jpg">
                 <p class="ln">Perambur</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="/pages/bookinground/ground4.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
