--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="assets/css/login.css">
+    <link rel="stylesheet" href="/assets/css/login.css">
 </head>
 <body>
     <div id="container">
@@ -17,7 +17,7 @@
                 <a href="/index.html" ><input type="button" value="Login" id="login"></a><br>
                 <a class="fp"href="#">Forget password</a><br>
                 <h4  class="newsign">New user</h4><br>
-            <a href="pages/login/signup.html" ><input type="button" value="Create New Acoount" id="newlogin"></a><br>
+            <a href="/pages/login/signup.html" ><input type="button" value="Create New Acoount" id="newlogin"></a><br>
                 
 
             </form>
