--- a/pages/login/register.html
+++ b/pages/login/register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/assets/css//register.css">
+    <link rel="stylesheet" href="../../assets/css//register.css">
     <script src="https://kit.fontawesome.com/49a7b6b32a.js" crossorigin="anonymous"></script>
 
 </head>
