--- a/pages/bookinground/booking.html
+++ b/pages/bookinground/booking.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking</title>
-    <link rel="stylesheet" href="/assets/css/booking.css">
+    <link rel="stylesheet" href="../../assets/css/booking.css">
     <script src="https://kit.fontawesome.com/49a7b6b32a.js" crossorigin="anonymous"></script>
 
 </head>
@@ -38,14 +38,14 @@
                         <div class="pay3">
                             <label>CVC</label><br>
                             <input type="text" placeholder="123" id="cvcinput"><br>
-                            <a href="/pages/bookinground/paymentsuccesful.html"><button class="payonline">Pay</button></a>
+                            <a href="../bookinground/paymentsuccesful.html"><button class="payonline">Pay</button></a>
                         </div><br>
                         
                         <div class="upi">
                             <h2>OR</h2><br>
                             <label >UPI </label><br>
                             <input type="text" placeholder="UPI ID" id="upiinput"><br>
-                            <a href="/pages/bookinground/paymentsuccesful.html"><button class="payonline">Pay</button></a>
+                            <a href="../bookinground/paymentsuccesful.html"><button class="payonline">Pay</button></a>
                             
                         </div>
                         </div>
