--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Contact us</a></li>
                 <li><a href="../login/login.html"> <button class="login">Login</button></a></li>
             </ul>
-            <img class="logo"src="/assets/images/Logo.png">
+            <img class="logo" src="../../assets/images/Logo.png">
             
             </div>
 
@@ -81,7 +81,7 @@
                 <h3 class="gn">DNS TURF</h3>
                 <img class="gro" src="../../assets/images/ground1.jpg">
                 <p class="ln">Vyasarpadi</p><br><br>
-                <a href="/pages/bookinground/ground1.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground1.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -104,7 +104,7 @@
                 <h3 class="gn">Pitch and Play</h3>
                 <img class="gro" src="../../assets/images/ground2.JPG">
                 <p class="ln">Annasalai</p><br><br>
-                <a href="/pages/bookinground/ground2.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground2.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -125,7 +125,7 @@
                 <h3 class="gn">Sports Sanity FC Marina</h3>
                 <img class="gro" src="../../assets/images/ground3.jpg">
                 <p class="ln">Kilpauk</p><br><br>
-                <a href="./ground3.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground3.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -147,7 +147,7 @@
                 <h3 class="gn">HotFut SPR City</h3>
                 <img class="gro" src="../../assets/images/ground4.jpg">
                 <p class="ln">Perambur</p><br><br>
-                <a href="/pages/bookinground/ground4.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground4.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -168,7 +168,7 @@
                 <h3 class="gn">Revolt theTurfWar</h3>
                 <img class="gro" src="../../assets/images/ground5.jpg">
                 <p class="ln">Perambur</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground5.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -189,7 +189,7 @@
                 <h3 class="gn">Seven Eleven's Turf</h3>
                 <img class="gro" src="../../assets/images/ground6.jpg">
                 <p class="ln">Kasi theatre</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground6.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -210,7 +210,7 @@
                 <h3 class="gn">Sky Arena</h3>
                 <img class="gro" src="../../assets/images/ground7.jpg">
                 <p class="ln">Bengaluru  Shivaji Nagar</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground7.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -231,7 +231,7 @@
                   <h3 class="gn">Tiento Sports</h3>
                 <img class="gro" src="../../assets/images/ground8.jpg">
                 <p class="ln">Bengaluru Sudhama Nagar</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground8.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -252,7 +252,7 @@
                 <h3 class="gn">Fusion The Turf</h3>
                 <img class="gro" src="../../assets/images/ground9.jpg">
                 <p class="ln">Bengaluru Langford Gardens</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground9.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -273,7 +273,7 @@
                 <h3 class="gn">Kovai Arena - Football Turf</h3>
                 <img class="gro" src="../../assets/images/ground10.jpg">
                 <p class="ln">Udayampalayam</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground10.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -294,7 +294,7 @@
                 <h3 class="gn">Sport Fit Arena</h3>
                 <img class="gro" src="../../assets/images/ground11.jpg">
                 <p class="ln">Elappully</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground11.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -315,7 +315,7 @@
                 <h3 class="gn">Turf Time</h3>
                 <img class="gro" src="../../assets/images/ground12.jpg">
                 <p class="ln">Salem</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground12.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -336,7 +336,7 @@
                 <h3 class="gn">Sivan sports turf</h3>
                 <img class="gro" src="../../assets/images/ground13.jpg">
                 <p class="ln"> Madurai</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground13.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -357,7 +357,7 @@
                 <h3 class="gn">Sopa's Goal Turf - Sports club</h3>
                 <img class="gro" src="../../assets/images/ground14.jpg">
                 <p class="ln">Iyer Bungalow, Madurai</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground14.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
@@ -378,7 +378,7 @@
                 <h3 class="gn">Turf Play 365</h3>
                 <img class="gro" src="../../assets/images/ground15.jpg">
                 <p class="ln">Perungudi Road</p><br><br>
-                <a href="login.html"> <button class="book">Book Now</button></a></li>
+                <a href="../../pages/bookinground/ground15.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                     <span class="material-symbols-outlined" style="font-size:202%" >
                         sports_cricket
