--- a/pages/login/signup.html
+++ b/pages/login/signup.html
@@ -21,7 +21,7 @@
            <label >Password:</label><br>
            <input type="password" placeholder="Password" id="password"><br>
            <p class="alert">By Entering the information you are expected receive <br>email or sms OTP when you are sign again</p><br>
-           <a href="/pages/login/register.html" ><input type="button" value="Register" id="newlogin"></a><br>
+           <a href="../../pages/login/register.html" ><input type="button" value="Register" id="newlogin"></a><br>
 
 
 
