--- a/pages/login/register.html
+++ b/pages/login/register.html
@@ -14,8 +14,8 @@
         <div class="tick">
             <i class="fa-solid fa-check"></i><br>
             <h2 class="h0">Your Account Successfuly Created</h2><br><br><br>
-            <a href="/pages/player/findplayers.html" ><input type="button" value="Find Players" id="findplayers"></a><br>
-            <a href="/pages/bookinground/bookground.html" ><input type="button" value="Book Grounds" id="bookground"></a> 
+            <a href="../../pages/player/findplayers.html" ><input type="button" value="Find Players" id="findplayers"></a><br>
+            <a href="../../pages/bookinground/bookground.html" ><input type="button" value="Book Grounds" id="bookground"></a> 
             
         </div>
  
