--- a/pages/bookinground/ground1.html
+++ b/pages/bookinground/ground1.html
@@ -19,11 +19,11 @@
         <div id="nav">
             
             <ul>
-                <li><a href="/index.html">Home</a> </li>
-                <li><a href="pages/player/findplayers.html">Find Players</a></li>
-                <li><a href="/pages/login/login.html"> <button class="login">Login</button></a></li>
+                <li><a href="../../index.html">Home</a> </li>
+                <li><a href="../../pages/player/findplayers.html">Find Players</a></li>
+                <li><a href="../../pages/login/login.html"> <button class="login">Login</button></a></li>
             </ul>
-            <img class="logo" src="/assets/images/Logo.png">
+            <img class="logo" src="../../assets/images/Logo.png">
             
             </div>
 
