--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -16,7 +16,7 @@
                 <input type="password" placeholder="Password" id="password"><br>
                 <a href="../../index.html" ><input type="button" value="Login" id="login"></a><br>
                 <a class="fp"href="#">Forget password</a><br>
-                <h4  class="newsign">New user</h4><br>
+                <p  class="newsign">New user</p><br>
             <a href="../../pages/login/signup.html" ><input type="button" value="Create New Acoount" id="newlogin"></a><br>
                 
 
