--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -79,7 +79,7 @@
                         person_filled
                         </span>
                   
-                    <p>Christopher</p>
+                    <p>Christ</p>
                     <a href="../../pages/player/playerr4.html"> <button class="visit">Visit</button></a></li>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                         person_filled
                         </span>
                   
-                    <p>Christopher</p>
+                    <p>Christ</p>
                     <a href="../../pages/player/playerr4.html"> <button class="visit">Visit</button></a></li>
                 </div>
             </div>
