--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -17,7 +17,7 @@
                 <a href="../../index.html" ><input type="button" value="Login" id="login"></a><br>
                 <a class="fp"href="#">Forget password</a><br>
                 <p  class="newsign">New user</p><br>
-            <a href="../../pages/login/signup.html" ><input type="button" value="Create New Acoount" id="newlogin"></a><br>
+            <a href="../../pages/login/signup.html" ><input type="button" value="Create New Account" id="newlogin"></a><br>
                 
 
             </form>
