--- a/pages/login/signup.html
+++ b/pages/login/signup.html
@@ -13,11 +13,11 @@
             <h1 class="sign">Create New Account</h1><br>
             <form>
            <label >Name:</label><br>
-           <input type="name" placeholder="Your Name " id="email"><br>
+           <input type="name" placeholder="Your Name " id="name1"><br>
            <label >Email:</label><br>
            <input type="email" placeholder="Email address " id="email"><br>
            <label >Phone Number:</label><br>
-           <input type="number" placeholder="Phone Number" id="email"><br>
+           <input type="text" placeholder="Phone Number" id="phoneno1"><br>
            <label >Password:</label><br>
            <input type="password" placeholder="Password" id="password"><br>
            <p class="alert">By Entering the information you are expected receive <br>email or sms OTP when you are sign again</p><br>
