--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
             <img class="groundicon" src="./assets/images/groundicon.png" alt="ground">
             <p class="boxcontent1">Book ground near by your place and play with privacy with your friends</p>
            <div class="sportsicon">
-            <span class="material-symbols-outlined" style="font-size:202%" >
-                sports_cricket
-                </span>
-                <i class="fa-solid fa-volleyball"></i>
-                <i class="fa-solid fa-basketball"></i>
-                <i class="fa-solid fa-table-tennis-paddle-ball"></i>
+            <img class="cricketicon"src="../../assets/images/cricketicon.png" alt="cricketicon">
+ <img class="cricketicon" src="../../assets/images/footballicon.png" alt="cricketicon">    
+ <img class="cricketicon" src="../../assets/images/tennisicon.png" alt="cricketicon">                  
+                     
 
                 
            </div>
