--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -51,10 +51,10 @@
     </form>
 </div>
 
-<div class="cont3">
+<!-- <div class="cont3">
     <img  class="profileusericon" src="../../assets/images/profileuser.png" alt="profileuser"><br>
     <a href="../login/login.html"> <button class="login2">Profile</button></a></li>
-</div>
+</div> -->
 <!-- <p class="city">Top Cities</p> -->
 
 
