--- a/pages/payment/booking.html
+++ b/pages/payment/booking.html
@@ -35,14 +35,14 @@
                         <div class="pay3">
                             <label>CVC</label><br>
                             <input type="text" placeholder="123" id="cvcinput"><br>
-                            <a href="../bookinground/paymentsuccesful.html"><button class="payonline">Pay</button></a>
+                            <a href="../../pages/payment/paymentsuccesful.html"><button class="payonline">Pay</button></a>
                         </div><br>
                         
                         <div class="upi">
                             <h2>OR</h2><br>
                             <label >UPI </label><br>
                             <input type="text" placeholder="UPI ID" id="upiinput"><br>
-                            <a href="../bookinground/paymentsuccesful.html"><button class="payonline">Pay</button></a>
+                            <a href="../../pages/payment/paymentsuccesful.html"><button class="payonline">Pay</button></a>
                             
                         </div>
                         </div>
