--- a/pages/player/joinplayer.html
+++ b/pages/player/joinplayer.html
@@ -53,7 +53,7 @@
                <input type="checkbox" id="checkbox">
                <span class="checkboxsentence">You accept to the terms and condition of joining as a player</span><br>
             </div>
-               <button class="profile">Join</button>
+             <a href="../../pages/player/registeredplayer.html"><button class="profile">Join</button></a>  
             
         </div>
         
