--- a/pages/bookinground/ground5.html
+++ b/pages/bookinground/ground5.html
@@ -72,17 +72,14 @@
                         <i class="fa-solid fa-location-dot"></i></a>
                     <p> No.131 - 133, M P M Road, Perambur, Chennai, Tamil Nadu 600039</p>
                    </div><br>
-                     <div class="sportsavail">
+                   <div class="sportsavail">
                     <h2>Sports Available</h2>
-                   
-                    <span class="material-symbols-outlined" style="font-size:202%" >
-                        sports_cricket
-                        </span>
-                        <span class="material-symbols-outlined" style="font-size:202%">
-                            sports_soccer
-                            </span>
-                   
-                </div><br>
+                    <div class="symbol">
+                    <img class="cricketicon"src="../../assets/images/cricketicon.png" alt="cricketicon">
+                    <img class="cricketicon" src="../../assets/images/footballicon.png" alt="cricketicon">    
+                    <img class="cricketicon" src="../../assets/images/tennisicon.png" alt="cricketicon">                  
+                </div>                 
+                           </div><br>
                 <div class="timinginfo">
                     <h3 class="time">Timing</h3>
                     <i class="fa-solid fa-clock"></i>
