--- a/pages/bookinground/ground2.html
+++ b/pages/bookinground/ground2.html
@@ -72,14 +72,14 @@
                     <p> 4th Floor, Hamid Building, No 190, Mount Rd, opp. IBIS Hotel, Chennai, Tamil Nadu 600006</p>
                    </div><br>
                     
-                    <div class="sportsavail">
-                        <h2>Sports Available</h2>
-                    <span class="material-symbols-outlined" style="font-size:202%" >
-                        sports_cricket
-                        </span>
-                        
-                    <i class="fa-solid fa-table-tennis-paddle-ball"></i>
-                </div><br>
+                   <div class="sportsavail">
+                    <h2>Sports Available</h2>
+                    <div class="symbol">
+                    <img class="cricketicon"src="../../assets/images/cricketicon.png" alt="cricketicon">
+                    <img class="cricketicon" src="../../assets/images/footballicon.png" alt="cricketicon">    
+                    <img class="cricketicon" src="../../assets/images/tennisicon.png" alt="cricketicon">                  
+                </div>                 
+                           </div><br>
                 <div class="timinginfo">
                     <h3 class="time">Timing</h3>
                     <i class="fa-solid fa-clock"></i>
