--- a/pages/bookinground/ground6.html
+++ b/pages/bookinground/ground6.html
@@ -73,16 +73,14 @@
                     <p>Kasi City Park-Kasi talkies, 4th Floor No.4, Pillaiyar Koil St, Kasi Estate, West Jafferkhanpet, Chennai, Tamil Nadu 600083</p>
                    </div><br>
                     
-                    <div class="sportsavail">
-                          <h2>Sports Available</h2>
-                    <span class="material-symbols-outlined" style="font-size:202%" >
-                        sports_cricket
-                        </span>
-                        <span class="material-symbols-outlined" style="font-size:202%">
-                            sports_soccer
-                            </span>
-                   
-                </div><br>
+                   <div class="sportsavail">
+                    <h2>Sports Available</h2>
+                    <div class="symbol">
+                    <img class="cricketicon"src="../../assets/images/cricketicon.png" alt="cricketicon">
+                    <img class="cricketicon" src="../../assets/images/footballicon.png" alt="cricketicon">    
+                    <img class="cricketicon" src="../../assets/images/tennisicon.png" alt="cricketicon">                  
+                </div>                 
+                           </div><br>
                 <div class="timinginfo">
                     <h3 class="time">Timing</h3>
                     <i class="fa-solid fa-clock"></i>
