--- a/pages/bookinground/ground6.html
+++ b/pages/bookinground/ground6.html
@@ -101,7 +101,7 @@
                          </div><br>
                          <div class="addplayer">
                             <h3>You can also Add players to play with </h3><br>
-                            <button class="addplayers">Add players </button>
+                            <a href="/pages/bookinground/booking.html"> <button class="addplayers">Add players </button></a>
                          </div>
             
             
