--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -48,8 +48,9 @@
     </div>
 
 <div class="cont3">
-    <i class="fa-solid fa-user"></i><br>
-    <a href="login.html"> <button class="login2">Profile</button></a></li>
+    <br>
+    <img class="userlogo" src="../../assets/images/userlogo.png" alt="profilepicofplayer">
+    <a href="login.html"> <button class="login2">Your Profile</button></a></li>
 </div>
     </div>
     <!-- main1 -->
@@ -87,7 +88,7 @@
                 <div class="group">
                     <br>
                                     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-                                <p class="nameplayer">Ramesh</p>
+                                <p class="nameplayer">Andrea</p>
                                 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
                                 <div class="ratings">
                                     <i class="fa-solid fa-star"></i>
@@ -100,7 +101,7 @@
                 <div class="group">
                     <br>
                                     <img class="userlogo" src="../../assets/images/userglogo.png" alt="userlogo">
-                                <p class="nameplayer">Andrea</p>
+                                <p class="nameplayer">Suresh</p>
                                 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
                                 <div class="ratings">
                                     <i class="fa-solid fa-star"></i>
@@ -114,7 +115,7 @@
                 <div class="group">
                     <br>
                                     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-                                <p class="nameplayer">Ramesh</p>
+                                <p class="nameplayer">Sakshi</p>
                                 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
                                 <div class="ratings">
                                     <i class="fa-solid fa-star"></i>
@@ -127,7 +128,7 @@
                 <div class="group">
                     <br>
                                     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-                                <p class="nameplayer">Ramesh</p>
+                                <p class="nameplayer">blank </p>
                                 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
                                 <div class="ratings">
                                     <i class="fa-solid fa-star"></i>
