--- a/pages/player/playerprofile.html
+++ b/pages/player/playerprofile.html
@@ -21,10 +21,10 @@
         </ul>
    
             <div class="cont2">
-
-                <a href="../../pages/login/login.html"> 
-                <button class="login2">Your Profile</button></a></li>
-            </div>
+                <br>
+               <img class="userlogo" src="../../assets/images/userlogo.png" alt="profilepicofplayer">
+                <a href="login.html"> <button class="login2"> Your Profile</button></a></li>
+                    </div>
           
       
         <img class="logo"src="../../assets/images/Logo.png" alt="Book and play">
