--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img class="groundicon" src="./assets/images/groundicon.png" alt="ground">
             <p class="boxcontent1">Book ground near by your place and play with privacy with your friends</p>
            <div class="sportsicon">
-            <img class="cricketicon"src="../../assets/images/cricketicon.png" alt="cricketicon">
+            <img class="cricketicon" src="./assets/images/cricketicon.png" alt="cricketicon">
  <img class="cricketicon" src="./assets/images/footballicon.png" alt="cricketicon">    
  <img class="cricketicon" src="./assets/images/tennisicon.png" alt="cricketicon">                  
                      
