--- a/pages/bookinground/ground1.html
+++ b/pages/bookinground/ground1.html
@@ -21,7 +21,7 @@
                 <li><a href="../../pages/player/findplayers.html">Find Players</a></li>
                 <li><a href="../../pages/login/login.html"> <button class="login">Login</button></a></li>
             </ul>
-            <img class="logo" src="../../assets/images/Logo.png" alt="logo">
+           <a href="../../index.html" ><img class="logo" src="../../assets/images/Logo.png" alt="logo"></a>
             
             </div>
 
