--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -22,7 +22,7 @@
                 <li><a href="#">Contact us</a></li>
 
             </ul>
-            <img class="logo" src="../../assets/images/Logo.png"  alt="Book and play">
+           <a href="../../index.html"> <img class="logo" src="../../assets/images/Logo.png"  alt="Book and play"></a>
             
             </div>
 
