--- a/pages/player/player5.html
+++ b/pages/player/player5.html
@@ -27,7 +27,8 @@
             </div>
           
       
-        <img class="logo"src="../../assets/images/Logo.png" alt="Book and play">
+            <a href="../../index.html"> <img class="logo" src="../../assets/images/Logo.png"  alt="Book and play"></a>
+ 
         <h3 class="cont1">  View Player Profile Connect Them</h3>
         </div>
     </header>
