--- a/pages/login/signup.html
+++ b/pages/login/signup.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div class="forms">
-            <h1 class="sign">Create New Account</h1><br>
+            <h1 class="signuphead">Create New Account</h1><br>
             <form>
            <label >Name:</label><br>
            <input type="name" placeholder="Your Name " id="name1"><br>
