--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <img class="player1" src="./assets/images/player1.jpg" alt="playerplay">
     </div>
        <!-- main1-->
+       <!-- main2 -->
     <div id="main2">
         <div class="mainchild">
         <div class="box1">
@@ -66,6 +67,8 @@
     </div>
         
     </div>
+    <!-- main2 -->
+    <!-- main3animation -->
     <div class="main3">
         
         <h2 class="sportsheading">Play all kind of sports</h2>
