--- a/pages/bookinground/ground4.html
+++ b/pages/bookinground/ground4.html
@@ -20,6 +20,7 @@
             
             <ul>
                 <li><a href="../../index.html">Home</a> </li>
+                <li><a href="../../pages/bookinground/bookground.html">Book Grounds</a></li>
                 <li><a href="../../pages/player/findplayers.html">Find Players</a></li>
                 <li><a href="../../pages/login/login.html"> <button class="login">Login</button></a></li>
             </ul>
@@ -116,7 +117,7 @@
                 <div class="booking1">
                     <div class="book1">
                         <h1>
-                            HotFut SPR City
+                            HotFut SPR City BOOKING
                         </h1><br><br>
                     </div>
                     <div class="book2">
