--- a/pages/bookinground/ground11.html
+++ b/pages/bookinground/ground11.html
@@ -20,6 +20,7 @@
             
             <ul>
                 <li><a href="../../index.html">Home</a> </li>
+                <li><a href="../../pages/bookinground/bookground.html">Book Grounds</a></li>
                 <li><a href="../../pages/player/findplayers.html">Find Players</a></li>
                 <li><a href="../../pages/login/login.html"> <button class="login">Login</button></a></li>
             </ul>
@@ -41,7 +42,7 @@
              <!-- sidebar1 -->
             <div class="sidebar1">
                 <div class="box1">
-                    <h2>Sport Fit Arena
+                    <h2>Sport Fit Arena BOOKING
                     </h2>
                     <p class="place">Elappully</p>
                 </div>
