--- a/pages/player/playerprofile.html
+++ b/pages/player/playerprofile.html
@@ -18,6 +18,7 @@
             
         <ul>
             <li><a href="../../index.html">Home</a> </li>
+            <li><a href="../../pages/player/findplayers.html">Find Players</a></li>
             
         </ul>
    
