--- a/pages/player/registeredplayer.html
+++ b/pages/player/registeredplayer.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../assets/css/registeredplayer.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     
-    <script src="https://kit.fontawesome.com/49a7b6b32a.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/49a7b6b32a.js" crossorigin="anonymous"  integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" ></script>
 </head>
 <body> 
     <header>
