--- a/pages/payment/booking.html
+++ b/pages/payment/booking.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking</title>
     <link rel="stylesheet" href="../../assets/css/booking.css">
-    <script src="https://kit.fontawesome.com/49a7b6b32a.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/49a7b6b32a.js" crossorigin="anonymous"  integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" ></script>
 
 </head>
 <body>
