--- a/pages/player/playerr4.html
+++ b/pages/player/playerr4.html
@@ -20,7 +20,7 @@
             
         </ul>
             <div class="cont2">
-                <img class="userlogo" src="../../assets/images/userlogo.png"><br>
+                <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo"><br>
                 <a href="/pages/login/login.html"> <button class="login2">Your Profile</button></a></li>
             </div>
           
@@ -38,7 +38,7 @@
         <div class="sidebar1">
             <div class="profile1">
                 <div class="box1">
-                    <img class="profilepic" src="../../assets/images/profileplayer.png"br><br>
+                    <img class="profilepic" src="../../assets/images/profileplayer.png" alt="profilepic"><br>
                     <a href="#"> <button class="profile">Christopher</button></a></li><br><br>
                     <div class="sports">
                         <p>Known Sports</p>
