--- a/pages/bookinground/ground6.html
+++ b/pages/bookinground/ground6.html
@@ -24,7 +24,7 @@
                 <li><a href="../../pages/player/findplayers.html">Find Players</a></li>
                 <li><a href="../../pages/login/login.html"> <button class="login">Login</button></a></li>
             </ul>
-            <img class="logo" src="/assets/images/Logo.png">
+            <img class="logo" src="/assets/images/Logo.png" alt="logo">
             
             </div>
 
