--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
     <title>Book play</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!-- header -->
     <header>
 
-        <div id="nav">
+     
 
             <ul>
                 <li><a href="#">Home</a> </li>
@@ -29,23 +26,23 @@
             </ul>
             <a href="/index.html"><img class="logo" src="./assets/images/Logo.png " alt="Book and play"></a>
 
-        </div>
+       
     </header>
     <!-- header -->
-    <!-- main1 -->
+    <!-- main1 About webpage  -->
     <div id="main1">
         <h1 class="word1">Book Your Grounds From Your Place <br><span style="color:rgb(56, 44, 186)">Connect
                 Players</span></h1>
         <img class="player1" src="./assets/images/player1.jpg" alt="playerplay">
     </div>
-    <!-- main1-->
-    <!-- main2 -->
+  <!-- main1 About webpage  -->
+    <!-- main2 what we do -->
     <div id="main2">
         <div class="mainchild">
             <div class="box">
-                <span class="heading0">Book Grounds</span>
+                <span class="box-heading1">Book Grounds</span>
                 <img class="groundicon" src="./assets/images/groundicon.png" alt="ground">
-                <p class="boxcontent1">Book ground near by your place and play with privacy with your friends</p>
+                <p class="box-content">Book ground near by your place and play with privacy with your friends</p>
                 <div class="sportsicon">
                     <img class="cricketicon" src="./assets/images/cricketicon.png" alt="cricketicon">
                     <img class="cricketicon" src="./assets/images/footballicon.png" alt="cricketicon">
@@ -58,31 +55,31 @@
 
             </div>
             <div class="box">
-                <span class="heading2">Find Players</span>
+                <span class="box-heading2">Find Players</span>
                 <img class="usericon" src="./assets/images/groupuser.png" alt="ground">
 
-                <p class="boxcontent1">Find player around you area you can Connect with them.Grab your new friends </p>
+                <p class="box-content">Find player around you area you can Connect with them.Grab your new friends </p>
 
 
             </div>
             <div class="box">
-                <span class="heading1">Manage Profile</span>
+                <span class="box-heading3">Manage Profile</span>
                 <img class="usericon" src="./assets/images/manageuser.png" alt="ground">
-                <p class="boxcontent1"> Manage your playing profile with us.Earn stars with game you play with your
+                <p class="box-content"> Manage your playing profile with us.Earn stars with game you play with your
                     partner</p>
 
             </div>
         </div>
 
     </div>
-    <!-- main2 -->
+   <!-- main2 what we do -->
     <!-- main3animation -->
     <div class="main3">
 
         <h2 class="sportsheading">Play all kind of sports</h2>
-        <div class="rotationcont">
+        <div class="rotation-content">
             <!-- imagerotation -->
-            <div class="imagerot">
+            <div class="image-rotation">
                 <img class="roationimage" src="./assets/images/playingc friends.jpg" alt="cricket">
                 <img class="roationimage" src="./assets/images/badminton.png" alt=" badminton">
                 <img class="roationimage" src="./assets/images/tt.jpg" alt="tennis">
@@ -106,6 +103,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p><br>
+                <!-- staricon -->
             <div class="star">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -115,6 +113,7 @@
 
 
             </div>
+              <!-- staricon -->
         </div>
         <div class="person">
             <p>Person2</p><br>
@@ -122,12 +121,14 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p><br>
+                  <!-- staricon -->
             <div class="star">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star-half-stroke"></i>
+                  <!-- staricon -->
 
 
             </div>
@@ -138,12 +139,14 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p><br>
+                  <!-- staricon -->
             <div class="star">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star-half-stroke"></i>
+                  <!-- staricon -->
 
 
             </div>
@@ -156,7 +159,7 @@
         <div id="footer1">
             <div class="row">
                 <div class="column1">
-                    <p class="footh">Company</p><br>
+                    <p class="foot-heading">Company</p><br>
 
                     <p><a href="#">About us</a> </p>
                     <p><a href="#">Privacy Policy</a></p>
@@ -167,7 +170,7 @@
 
                 </div>
                 <div class="column1">
-                    <p class="footh">Get Help</p><br>
+                    <p class="foot-heading">Get Help</p><br>
 
                     <p><a href="#">FAQ</a> </p>
                     <p><a href="#">Contact</a></p>
@@ -176,7 +179,7 @@
 
                 </div>
                 <div class="column1">
-                    <p class="footh">Connect us on</p><br>
+                    <p class="foot-heading">Connect us on</p><br>
 
                     <a href="#" aria-label="facebook"> <i class="fa-brands fa-facebook"></i> </a>
                     <a href="#" aria-label="twitter"> <i class="fa-brands fa-twitter"></i> </a>
@@ -197,6 +200,3 @@
 </body>
 
 </html>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
