--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -7,22 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Ground</title>
     <link rel="stylesheet" href="../../assets/css/bookground.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap"
-        rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-    <header>
 
-        <div id="nav">
+ <!-- header -->
+     <header>
+
+
 
             <ul>
                 <li><a href="../../index.html">Home</a> </li>
@@ -32,10 +30,11 @@
             </ul>
             <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
 
-        </div>
+    
 
     </header>
-    <!-- main1 -->
+     <!-- header -->
+    <!-- main1 search-->
     <div class="main1">
 
         <h3 class="content1">Search Grounds Around you</h3>
@@ -62,9 +61,9 @@
 
 
     </div>
-    <!-- main1 -->
+  <!-- main1 search-->
 
-    <!-- main2 -->
+    <!-- main2 groundslist -->
     <div class="main2">
         <div class="parent">
   
@@ -396,12 +395,12 @@
 
 
     </div>
-    <!-- main3 -->
+    <!-- main3  groundslist -->
     <footer>
         <div id="footer1">
             <div class="row">
                 <div class="column1">
-                    <h4 class="footh">Company</h4><br>
+                    <h4 class="foot-heading">Company</h4><br>
 
                     <p><a href="#">About us</a> </p>
                     <p><a href="#">Privacy Policy</a></p>
@@ -412,7 +411,7 @@
 
                 </div>
                 <div class="column1">
-                    <h4 class="footh">Get Help</h4><br>
+                    <h4 class="foot-heading">Get Help</h4><br>
 
                     <p><a href="#">FAQ</a> </p>
                     <p><a href="#">Contact</a></p>
@@ -421,7 +420,7 @@
 
                 </div>
                 <div class="column1">
-                    <h4 class="footh">Connect us on</h4><br>
+                    <h4 class="foot-heading">Connect us on</h4><br>
 
                     <a href="#" aria-label="facebook"> <i class="fa-brands fa-facebook"></i> </a>
                     <a href="#" aria-label="twitter"> <i class="fa-brands fa-twitter"></i> </a>
