--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="icon" type="image/icon" href="../../assets/images/faviicon...png">
     <link rel="stylesheet" href="../../assets/css/login.css">
 </head>
 
@@ -14,13 +15,13 @@
         <div class="forms">
             <h1 class="sign">Sign in</h1>
             <form>
-                <input type="email" placeholder="Email address " id="email"><br>
-                <input type="password" placeholder="Password" id="password"><br>
-                <a href="../../index.html"><input type="button" value="Login" id="login"></a><br>
+                <input type="email" placeholder="Email address " id="email" aria-label="email"><br>
+                <input type="password" placeholder="Password" id="password" aria-label="password"><br>
+                <a href="../../index.html"><input type="button" value="Login" id="login" aria-label="button"></a><br>
                 <a class="fp" href="#">Forget password</a><br>
                 <p class="newsign">New user</p><br>
                 <a href="../../pages/login/signup.html"><input type="button" value="Create New Account"
-                        id="newlogin"></a><br>
+                        id="newlogin" aria-label="button"></a><br>
 
 
             </form>
