--- a/pages/player/playerprofile.html
+++ b/pages/player/playerprofile.html
@@ -55,7 +55,7 @@
                     </div>
                      <a href="#"> <button class="connect">Connect</button></a></li><br><br>
                      <div class="playerinfo">
-                        <p>Hi iam person one i played 6 matches .Iam good at cricket batting please feel free to connect me if you playing   </p>
+                        <p>Hi iam ramesh i played 6 matches .Iam good at cricket batting  feel free to connect me if you playing   </p>
                         
                       
                     </div>
