--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book play</title>
+    <title>Book & play</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" type="image/icon" href="./assets/images/faviicon...png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap" rel="stylesheet">
 </head>
@@ -99,7 +100,7 @@
     <div id="review">
         <div class="person">
             <p>Person1</p><br>
-            <img class="personimg" src="./assets/images/reviewer2.jpg" alt="person1"><br>
+            <img class="personimg" src="./assets/images/reviewer1.jpg" alt="person1"><br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p><br>
@@ -135,7 +136,7 @@
         </div>
         <div class="person">
             <p>Person3</p><br>
-            <img class="personimg" src="./assets/images/reviewer2.jpg" alt="person1"><br>
+            <img class="personimg" src="./assets/images/reviewer3.jpg" alt="person1"><br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p><br>
