--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#">Home</a> </li>
                 <li><a href="./pages/bookinground/bookground.html">Book Grounds</a></li>
                 <li><a href="./pages/player/findplayers.html">Find Players</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="./pages/contactus/contact.html">Contact us</a></li>
                 <li><a href="./pages/login/login.html"> <button class="login">Login</button></a></li>
             </ul>
             <a href="/index.html"><img class="logo" src="./assets/images/Logo.png " alt="Book and play"></a>
